# sc-hsm-embedded

./: .cproject  .gitignore  .project  AUTHORS  COPYING  Makefile.am  README  README.md  annotated.html  annotated.js  ccidT1_8c.html  ccidT1_8c.js  ccidT1_8h.html  ccidT1_8h.js  ccid__usb_8c.html  ccid__usb_8c.js  ccid__usb_8h.html  ccid__usb_8h.js  classes.html  configure.ac  ctapi_8c.html  ctapi_8c.js  ctapi_8h.html  ctapi_8h.js  ctbcs_8c.html  ctbcs_8c.js  ctbcs_8h.html  ctbcs_8h.js  doxygen.Doxyfile  files.html  files.js  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  globals_type.html  globals_vars.html  index.html  navtree.js  (+13 more)
MacOSX/: build.sh
doc/: AGD_SmartCard-HSM_Middleware_Installation.odt
eclipse_launch_config/: testctapi.launch  testpkcs11.launch
etc/: add-sc-hsm-usb-id.sh
etc/udev/rules.d/: 99-sc_hsm.rules
libcrypto/: readme.txt
libcrypto/include/openssl/: opensslconf.h
libcurl-7.46/lib/: libcurl.exp  libcurl.lib
libusb-1.0/: libusb.lib
libusb-1.0/x64/: libusb.lib
msvc/: CT_vs2010.sln  HSMSignHash.vcxproj  SignHash.vcxproj  build_all.bat  build_installer.bat  build_x64.bat  build_x86.bat  ctccid-test.vcxproj  ctccid.vcxproj  ctccid.vcxproj.filters  installer.wxs  module.def  pkcs11.vcxproj  pkcs11.vcxproj.filters  sc-hsm-ctapi-pkcs11-test.vcxproj  sc-hsm-ctapi-pkcs11.vcxproj  sc-hsm-ctapi-ultralite-sample.vcxproj  sc-hsm-ctapi-ultralite-test.vcxproj  sc-hsm-ctapi-ultralite.vcxproj  sc-hsm-ctapi-vs2010.sln  sc-hsm-embedded.sln  sc-hsm-pcsc-pkcs11-test.vcxproj  sc-hsm-pcsc-pkcs11.vcxproj  sc-hsm-pcsc-ultralite-sample.vcxproj  sc-hsm-pcsc-ultralite-test.vcxproj  sc-hsm-pcsc-ultralite.vcxproj  sc-hsm-pcsc-vs2010.sln  sc-hsm-pkcs11-test.vcxproj  sc-hsm-pkcs11.vcxproj  sc-hsm-ultralite-sample.vcxproj  sc-hsm-ultralite-test.vcxproj  sc-hsm-ultralite.vcxproj  sc-hsm-vs2010.sln  testctapi.vcxproj  testctapi.vcxproj.filters  testpkcs11.vcxproj
msvc.old/: build_x64.bat  ctccid.vcxproj  sc-hsm-ctapi-ultralite-sample.vcxproj  sc-hsm-ctapi-ultralite.vcxproj  sc-hsm-pcsc-pkcs11-test.vcxproj  sc-hsm-pcsc-pkcs11.vcxproj  sc-hsm-pcsc-ultralite-test.vcxproj  sc-hsm-pcsc-vs2010.sln
msvc/ram-client/: ram-client.vcxproj
msvc/sc-hsm-minidriver/: sc-hsm-minidriver.vcxproj
msvc/sc-hsm-minidriver-test/: sc-hsm-minidriver-test.vcxproj
msvc/sc-hsm-pkcs11-pcsc/: sc-hsm-pkcs11-pcsc.props  sc-hsm-pkcs11-pcsc.vcxproj
msvc/sc-hsm-pkcs11-test/: sc-hsm-pkcs11-test.vcxproj
p11tests/: index.html  loadtests.js  tg_signing.xml
p11tests/bnotk/: index.html  tg_decryption.xml  tg_signing.xml  tg_signing_qes.xml
p11tests/dgn/: loadtests.js  tg_decryption.xml  tg_signing.xml  tg_signing_qes.xml  tg_signing_qes_ecc.xml
p11tests/dtrust/: doctp.xsl  loadtests.js  tg_decryption.xml  tg_signing.xml  tg_signing_qes.xml
p11tests/hba/: index.html  loadtests.js  tg_decryption.xml  tg_enumerate.xml  tg_signing.xml
p11tests/sc-hsm/: index.html  loadtests.js  tg_certificate.xml  tg_decryption.xml  tg_delete.xml  tg_enumerate.xml  tg_generatekeys.xml  tg_signing.xml
p11tests/signtrust/: index.html  tg_signing.xml  tg_signing_qes.xml
p11tests/signtrust32/: index.html  loadtests.js  tg_decryption.xml  tg_signing.xml  tg_signing_qes.xml
p11tests/signtrust35/: activatepin.js  doctg.xsl  index.html  tg_enumerate.xml
p11tests/starcos/: loadtests.js  tg_decryption.xml  tg_enumerate.xml  tg_signing.xml
src/: Makefile.am
src/common/: Makefile.am  asn1.c  asn1.h  bytebuffer.c  bytestring.c  bytestring.h  cvc.c  cvc.h  debug.c  debug.h  memset_s.h  mutex.c  pkcs15.c  pkcs15.h
src/ctccid/: Makefile.am  ccidAPDU.c  ccidT1.c  ccidT1.h  ccid_usb.c  ccid_usb.h  ctapi.c  ctapi.h  ctbcs.c  ctbcs.h  ctccid_debug.c  ctccid_debug.h  dump.c  dump.h  libctccid.exports  mutex.c  mutex.h  scr.h  usb_device.c  usb_device.h  utils.c  utils.h
src/examples/: Makefile.am
src/examples/key-generator/: Makefile.am  README.md  key-generator.c  sc-hsm-cardservice.c  sc-hsm-cardservice.h
src/minidriver/: minidriver-sc-hsm.reg  minidriver.c  minidriver.exports
src/msvc/: CT_vs2010.sln  ctccid.vcxproj  ctccid.vcxproj.filters  testctapi.vcxproj  testctapi.vcxproj.filters
src/pkcs11/: Makefile.am  asn1.c  asn1.h  bytebuffer.c  bytebuffer.h  bytestring.c  bytestring.h  certificateobject.c  certificateobject.h  crc32.c  crc32.h  crypto-libcrypto.c  crypto.h  cryptoki.h  cvc.c  cvc.h  dataobject.c  dataobject.h  debug.c  debug.h  libpkcs11.exports  object.c  object.h  p11generic.c  p11generic.h  p11mechanisms.c  p11objects.c  p11session.c  p11slots.c  pkcs11t.h  pkcs15.c  pkcs15.h  privatekeyobject.c  privatekeyobject.h  publickeyobject.c  publickeyobject.h  sc-hsm-pkcs11.h  secretkeyobject.c  secretkeyobject.h  session.c  (+25 more)
src/ramoverhttp/: Makefile.am  ram-client.c  ramoverhttp.c  ramoverhttp.h
src/sc-hsm/: sc-hsm-pkcs11.h
src/tests/: Makefile.am  ctccid-test.c  sc-hsm-minidriver-test.c  sc-hsm-pkcs11-test.c  starcos-pkcs11-test  testctapi.c  testpkcs11.c
src/ultralite/: Makefile.am  metadata.h  sc-hsm-ultralite-sample.c  sc-hsm-ultralite-test.c  sc-hsm-ultralite.c  sc-hsm-ultralite.h  sha256.c  utils.c  utils.h
src/ultralite/ext-win/: dirent.h
src/utils/: Makefile.am  SignHash.c  SignHash.h  sha256.c  utils.c  utils.h
xpi/src/: Makefile  chrome.manifest  install.rdf
xpi/src/content/: sc-hsm-pkcs11.js  sc-hsm-pkcs11.xul
